--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -38,7 +38,7 @@ Aa-12
                     </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
