--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,12 +198,14 @@ body {
 .table tbody tr td, .table tbody tr th, .table tfoot tr td, .table tfoot tr th, .table thead tr td, .table thead tr th {
   padding: 6px 4px; }
 
+.card {
+  margin-top: 0; }
+
 .card .card-body .form-group {
   margin: 1rem 0 0; }
 
-.card .toolbar .btn {
-  font-weight: 500;
-  padding: 0.5rem 0.8rem; }
+.card .material-datatables {
+  margin-top: 1rem; }
 
 .scheduler {
   margin: 0 auto;
