--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -14,76 +14,79 @@ Aa-3
 
 <div class="card">
     <div class="card-body">
-        <form method="post">
-            <%- include('../../common/master/_hidden') %>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="locationBranchCode" class="bmd-label-static">
-                        劇場
-                    </label>
-                    <select class="form-control" name="locationBranchCode">
-                        <option value="">選択してください</option>
-                        <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>">
-                            <%= movieTheater.name.ja %>
-                        </option>
-                        <% } %>
-                        <% } else { %>
-                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                        <% } %>
-                        <% } %>
-                    </select>
-                </div>
-                <div class="form-group bmd-form-group col-md-3">
-                </div>
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="movieIdentifier" class="bmd-label-static">
-                        作品コード
-                    </label>
-                    <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier" placeholder=""
-                        maxlength=64 value="">
-                </div>
-
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="name" class="bmd-label-static">
-                        作品名
-                    </label>
-                    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="">
-                </div>
-            </div>
-
-            <div class="form-group bmd-form-group">
-                <label for="containsEnded" class="bmd-label-static">
-                </label>
-                <div class="form-check">
-                    <label class="form-check-label" for="containsEnded">
-                        <input class="form-check-input" type="checkbox" name="containsEnded" value="1"
-                            id="containsEnded">
-                        終了作品を含む
-                        <span class="form-check-sign">
-                            <span class="check"></span>
-                        </span>
-                    </label>
-                </div>
-            </div>
-
-            <div class="panel-body">
-                <a class="btn btn-primary" role="button" href="/events/screeningEventSeries/add">
-                    <i class=" fa fa-plus"></i> 登録</a>
-
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/events/screeningEventSeries/add">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../../common/master/_hidden') %>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="locationBranchCode" class="bmd-label-static">
+                                        劇場
+                                    </label>
+                                    <select class="form-control" name="locationBranchCode">
+                                        <option value="">選択してください</option>
+                                        <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
+                                        <% for (const movieTheater of movieTheaters) { %>
+                                        <option value="<%= movieTheater.branchCode %>">
+                                            <%= movieTheater.name.ja %>
+                                        </option>
+                                        <% } %>
+                                        <% } else { %>
+                                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                                        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %>
+                                        </option>
+                                        <% } %>
+                                        <% } %>
+                                    </select>
+                                </div>
+                                <div class="form-group bmd-form-group col-md-3">
+                                </div>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="movieIdentifier" class="bmd-label-static">
+                                        作品コード
+                                    </label>
+                                    <input type="text" class="form-control" name="movieIdentifier" id="movieIdentifier"
+                                        placeholder="" maxlength=64 value="">
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="name" class="bmd-label-static">
+                                        作品名
+                                    </label>
+                                    <input class="form-control" name="name" id="name" placeholder="" maxlength=64
+                                        value="">
+                                </div>
+                            </div>
+
+                            <div class="form-group bmd-form-group">
+                                <label for="containsEnded" class="bmd-label-static">
+                                </label>
+                                <div class="form-check">
+                                    <label class="form-check-label" for="containsEnded">
+                                        <input class="form-check-input" type="checkbox" name="containsEnded" value="1"
+                                            id="containsEnded">
+                                        終了作品を含む
+                                        <span class="form-check-sign">
+                                            <span class="check"></span>
+                                        </span>
+                                    </label>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
