--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -14,47 +14,47 @@ ST-01
 
 <div class="card">
     <div class="card-body">
-        <form method="post">
-            <%- include('../../common/master/_hidden') %>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]"
-                        class="bmd-label-static">
-                        劇場
-                    </label>
-                    <select class="form-control"
-                        name="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]">
-                        <option value="">選択してください</option>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>">
-                            <%= movieTheater.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="branchCode[$eq]" class="bmd-label-static">
-                        コード
-                    </label>
-                    <input class="form-control" name="branchCode[$eq]">
-                </div>
-            </div>
-
-            <div>
-                <a class="btn btn-primary disabled" role="button" href="/places/movieTheater/new">
-                    <i class=" fa fa-plus"></i> 登録</a>
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../../common/master/_hidden') %>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]"
+                                        class="bmd-label-static">
+                                        劇場
+                                    </label>
+                                    <select class="form-control"
+                                        name="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]">
+                                        <option value="">選択してください</option>
+                                        <% for (const movieTheater of movieTheaters) { %>
+                                        <option value="<%= movieTheater.branchCode %>">
+                                            <%= movieTheater.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="branchCode[$eq]" class="bmd-label-static">
+                                        コード
+                                    </label>
+                                    <input class="form-control" name="branchCode[$eq]">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
