--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -14,81 +14,83 @@ PS-02
 
 <div class="card">
     <div class="card-body search searchPriceSpecification">
-        <form method="post">
-            <%- include('../common/master/_hidden') %>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-4">
-                    <label for="typeOf" class="bmd-label-static">
-                        仕様タイプ
-                    </label>
-                    <select class="form-control" name="typeOf">
-                        <option value="" selected>選択してください</option>
-                        <option value="<%= PriceSpecificationType.CategoryCodeChargeSpecification %>">
-                            各種区分加算料金</option>
-                        <option value="<%= PriceSpecificationType.MovieTicketTypeChargeSpecification %>">
-                            ムビチケ加算料金</option>
-                    </select>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-4">
-                    <label for="appliesToCategoryCode" class="bmd-label-static">
-                        適用カテゴリー
-                    </label>
-                    <select class="form-control" name="appliesToCategoryCode">
-                        <option value="">選択してください</option>
-                        <% videoFormatTypes.forEach((videoFormatType) => { %>
-                        <option
-                            value="<%= JSON.stringify({codeValue: videoFormatType.codeValue, inCodeSet:{identifier:videoFormatType.inCodeSet.identifier}}) %>">
-                            上映方式タイプ <%= videoFormatType.name.ja %>
-                        </option>
-                        <% }) %>
-
-                        <% soundFormatTypes.forEach((soundFormatType) => { %>
-                        <option
-                            value="<%= JSON.stringify({codeValue: soundFormatType, inCodeSet:{identifier:soundFormatType.inCodeSet.identifier}}) %>">
-                            音響方式タイプ <%= soundFormatType.name.ja %>
-                        </option>
-                        <% }) %>
-
-                        <% seatingTypes.forEach((seatingType) => { %>
-                        <option
-                            value="<%= JSON.stringify({codeValue: seatingType, inCodeSet:{identifier:seatingType.inCodeSet.identifier}}) %>">
-                            座席タイプ <%= seatingType.name.ja %>
-                        </option>
-                        <% }) %>
-                    </select>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-4">
-                    <label for="appliesToMovieTicketType" class="bmd-label-static">
-                        適用ムビチケ券種区分
-                    </label>
-                    <select class="form-control" name="appliesToMovieTicketType">
-                        <option value="">選択してください</option>
-                        <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
-                        <option value="<%= movieTicketType.codeValue %>">
-                            <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
-                        </option>
-                        <% }) %>
-                    </select>
-                </div>
-            </div>
-
-            <div class="panel-body">
-                <a class="btn btn-primary" role="button" href="/priceSpecifications/new">
-                    <i class=" fa fa-plus"></i> 登録</a>
-
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/priceSpecifications/new">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../common/master/_hidden') %>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-4">
+                                    <label for="typeOf" class="bmd-label-static">
+                                        仕様タイプ
+                                    </label>
+                                    <select class="form-control" name="typeOf">
+                                        <option value="" selected>選択してください</option>
+                                        <option value="<%= PriceSpecificationType.CategoryCodeChargeSpecification %>">
+                                            各種区分加算料金</option>
+                                        <option
+                                            value="<%= PriceSpecificationType.MovieTicketTypeChargeSpecification %>">
+                                            ムビチケ加算料金</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-4">
+                                    <label for="appliesToCategoryCode" class="bmd-label-static">
+                                        適用カテゴリー
+                                    </label>
+                                    <select class="form-control" name="appliesToCategoryCode">
+                                        <option value="">選択してください</option>
+                                        <% videoFormatTypes.forEach((videoFormatType) => { %>
+                                        <option
+                                            value="<%= JSON.stringify({codeValue: videoFormatType.codeValue, inCodeSet:{identifier:videoFormatType.inCodeSet.identifier}}) %>">
+                                            上映方式タイプ <%= videoFormatType.name.ja %>
+                                        </option>
+                                        <% }) %>
+
+                                        <% soundFormatTypes.forEach((soundFormatType) => { %>
+                                        <option
+                                            value="<%= JSON.stringify({codeValue: soundFormatType, inCodeSet:{identifier:soundFormatType.inCodeSet.identifier}}) %>">
+                                            音響方式タイプ <%= soundFormatType.name.ja %>
+                                        </option>
+                                        <% }) %>
+
+                                        <% seatingTypes.forEach((seatingType) => { %>
+                                        <option
+                                            value="<%= JSON.stringify({codeValue: seatingType, inCodeSet:{identifier:seatingType.inCodeSet.identifier}}) %>">
+                                            座席タイプ <%= seatingType.name.ja %>
+                                        </option>
+                                        <% }) %>
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-4">
+                                    <label for="appliesToMovieTicketType" class="bmd-label-static">
+                                        適用ムビチケ券種区分
+                                    </label>
+                                    <select class="form-control" name="appliesToMovieTicketType">
+                                        <option value="">選択してください</option>
+                                        <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
+                                        <option value="<%= movieTicketType.codeValue %>">
+                                            <%= movieTicketType.codeValue %> <%= movieTicketType.name.ja %>
+                                        </option>
+                                        <% }) %>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
