--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -14,30 +14,32 @@ PR-00
 
 <div class="card">
     <div class="card-body search searchProducts">
-        <form method="post">
-            <%- include('../common/master/_hidden') %>
-
-            <div class="form-group bmd-form-group">
-                <label for="name[$regex]" class="bmd-label-static">
-                    名称
-                </label>
-                <input class="form-control" name="name[$regex]" id="name[$regex]" placeholder="" maxlength=64 value="">
-            </div>
-
-            <div class="panel-body">
-                <a class="btn btn-primary" role="button" href="/products/new">
-                    <i class=" fa fa-plus"></i> 登録</a>
-
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/products/new">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../common/master/_hidden') %>
+
+                            <div class="form-group bmd-form-group">
+                                <label for="name[$regex]" class="bmd-label-static">
+                                    名称
+                                </label>
+                                <input class="form-control" name="name[$regex]" id="name[$regex]" placeholder=""
+                                    maxlength=64 value="">
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
