--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -14,35 +14,34 @@ Aa-17
 
 <div class="card">
     <div class="card-body">
-        <form method="post">
-            <%- include('../common/master/_hidden') %>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-6">
-                    <label for="codeValue" class="bmd-label-static">
-                        コード
-                    </label>
-                    <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-                        value="">
-                </div>
-            </div>
-
-            <div class="panel-body">
-                <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
-                <a class="btn btn-primary" role="button" href="/serviceTypes/add">
-                    <i class=" fa fa-plus"></i> 登録</a>
-                <% } %>
-
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/serviceTypes/add">
+                <i class="material-icons">add</i>登録</a>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <%- include('../common/master/_hidden') %>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-6">
+                                    <label for="codeValue" class="bmd-label-static">
+                                        コード
+                                    </label>
+                                    <input type="text" class="form-control" name="codeValue" id="codeValue"
+                                        placeholder="" maxlength=64 value="">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
