--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -14,110 +14,115 @@ Aa-6
 
 <div class="card">
     <div class="card-body">
-        <form method="post">
-            <% /* 共通Hiddenコントロール */ %>
-            <%- include('../common/master/_hidden') %>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="identifier" class="bmd-label-static">
-                        コード
-                    </label>
-                    <input type="text" class="form-control" name="identifier" id="identifier" placeholder=""
-                        maxlength=64>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="name" class="bmd-label-static">
-                        名称
-                    </label>
-                    <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
-                </div>
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="ticketTypeGroups" class="bmd-label-static">
-                        券種グループ
-                    </label>
-                    <select name="ticketTypeGroups" id="ticketTypeGroups" class="form-control">
-                        <option value="">---</option>
-                        <% for (let ticketTypeGroupList of ticketTypeGroupsList) { %>
-                        <option value="<%- ticketTypeGroupList.id %>">
-                            <%- ticketTypeGroupList.name.ja %>
-                        </option>
-                        <% } %>
-                    </select>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-3">
-                    <label for="category[codeValue]" class="bmd-label-static">
-                        カテゴリー
-                    </label>
-                    <select class="form-control" name="category[codeValue]">
-                        <option value="">---</option>
-                        <% ticketTypeCategories.forEach((category) => { %>
-                        <option value="<%= category.codeValue %>">
-                            <%= category.name.ja %>
-                        </option>
-                        <% }) %>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-6">
-                    <label for="" class="bmd-label-static">
-                        単価
-                    </label>
-                    <div class="input-group">
-                        <select class="form-control" name="priceSpecification[referenceQuantity][value]">
-                            <option value="">---</option>
-                            <% for (let i = 1; i <= 10; i++) { %>
-                            <option value="<%= i %>">
-                                <%= i %>
-                            </option>
-                            <% } %>
-                        </select>
-
-                        <div class="input-group-append">
-                            <span class="input-group-text">枚あたり</span>
-                        </div>
-
-                        <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[minPrice]"
-                            id="priceSpecification[minPrice]" value="" />
-
-                        <div class="input-group-append">
-                            <span class="input-group-text">円以上</span>
-                        </div>
-
-                        <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[maxPrice]"
-                            id="priceSpecification[maxPrice]" value="" />
-
-                        <div class="input-group-append">
-                            <span class="input-group-text">円以下</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-6"></div>
-            </div>
-
-            <div class="panel-body">
-                <a class="btn btn-primary" role="button" href="/ticketTypes/add">
-                    <i class=" fa fa-plus"></i> 登録</a>
-                <% if (process.env.USE_COA === '1') { %>
-                <a class="btn btn-primary importFromCOA" role="button" href="javascript:void(0)">
-                    <i class=" fa fa-plus"></i> COAからインポート</a>
-                <% } %>
-
-                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-            </div>
-        </form>
+        <div class="toolbar">
+            <!--        Here you can write extra buttons/actions for the toolbar              -->
+            <a class="btn btn-primary" href="/ticketTypes/add">
+                <i class="material-icons">add</i>登録</a>
+            <% if (process.env.USE_COA === '1') { %>
+            <a class="btn btn-primary importFromCOA" role="button" href="javascript:void(0)">
+                <i class="material-icons">add</i>COAからインポート</a>
+            <% } %>
+            <a class="btn btn-primary search btn-ok" href="#">
+                <i class="material-icons">refresh</i>更新</a>
+        </div>
         <div class="material-datatables">
             <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
+                    <div class="col-sm-12">
+                        <form method="post">
+                            <% /* 共通Hiddenコントロール */ %>
+                            <%- include('../common/master/_hidden') %>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="identifier" class="bmd-label-static">
+                                        コード
+                                    </label>
+                                    <input type="text" class="form-control" name="identifier" id="identifier"
+                                        placeholder="" maxlength=64>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="name" class="bmd-label-static">
+                                        名称
+                                    </label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=""
+                                        maxlength=64>
+                                </div>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="ticketTypeGroups" class="bmd-label-static">
+                                        券種グループ
+                                    </label>
+                                    <select name="ticketTypeGroups" id="ticketTypeGroups" class="form-control">
+                                        <option value="">---</option>
+                                        <% for (let ticketTypeGroupList of ticketTypeGroupsList) { %>
+                                        <option value="<%- ticketTypeGroupList.id %>">
+                                            <%- ticketTypeGroupList.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="category[codeValue]" class="bmd-label-static">
+                                        カテゴリー
+                                    </label>
+                                    <select class="form-control" name="category[codeValue]">
+                                        <option value="">---</option>
+                                        <% ticketTypeCategories.forEach((category) => { %>
+                                        <option value="<%= category.codeValue %>">
+                                            <%= category.name.ja %>
+                                        </option>
+                                        <% }) %>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-6">
+                                    <label for="" class="bmd-label-static">
+                                        単価
+                                    </label>
+                                    <div class="input-group">
+                                        <select class="form-control"
+                                            name="priceSpecification[referenceQuantity][value]">
+                                            <option value="">---</option>
+                                            <% for (let i = 1; i <= 10; i++) { %>
+                                            <option value="<%= i %>">
+                                                <%= i %>
+                                            </option>
+                                            <% } %>
+                                        </select>
+
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">枚あたり</span>
+                                        </div>
+
+                                        <input class="form-control" placeholder="" maxlength=10
+                                            name="priceSpecification[minPrice]" id="priceSpecification[minPrice]"
+                                            value="" />
+
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">円以上</span>
+                                        </div>
+
+                                        <input class="form-control" placeholder="" maxlength=10
+                                            name="priceSpecification[maxPrice]" id="priceSpecification[maxPrice]"
+                                            value="" />
+
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">円以下</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-6"></div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div id="list" style="display:none;" class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table id="datatables" class="table table-no-bordered table-hover dataTable dtr-inline"
                             cellspacing="0" width="100%" style="width: 100%;" role="grid"
                             aria-describedby="datatables_info">
