--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -50,8 +50,6 @@ Aa-3
                                     </select>
                                 </div>
                                 <div class="form-group bmd-form-group col-md-3">
-                                </div>
-                                <div class="form-group bmd-form-group col-md-3">
                                     <label for="movieIdentifier" class="bmd-label-static">
                                         作品コード
                                     </label>
@@ -66,20 +64,19 @@ Aa-3
                                     <input class="form-control" name="name" id="name" placeholder="" maxlength=64
                                         value="">
                                 </div>
-                            </div>
-
-                            <div class="form-group bmd-form-group">
-                                <label for="containsEnded" class="bmd-label-static">
-                                </label>
-                                <div class="form-check">
-                                    <label class="form-check-label" for="containsEnded">
-                                        <input class="form-check-input" type="checkbox" name="containsEnded" value="1"
-                                            id="containsEnded">
-                                        終了作品を含む
-                                        <span class="form-check-sign">
-                                            <span class="check"></span>
-                                        </span>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label for="containsEnded" class="bmd-label-static">
                                     </label>
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="containsEnded">
+                                            <input class="form-check-input" type="checkbox" name="containsEnded"
+                                                value="1" id="containsEnded">
+                                            終了作品を含む
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                         </form>
