--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -20,6 +20,9 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
 
+    <!-- timepicker -->
+    <link rel="stylesheet" href="/css/jquery.timepicker.min.css">
+
     <!-- original -->
     <link href="/css/style.css" rel="stylesheet">
     <%- defineContent('styles') %>
@@ -51,6 +54,9 @@
     <script src="/js/locales/bootstrap-datepicker.ja.js" type="text/javascript"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    <!-- timepicker -->
+    <script src="/js/jquery.timepicker.min.js"></script>
 
     <!-- json editor -->
     <script src="/node_modules/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
