--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -20,91 +20,101 @@ Aa-4
                 <i class="material-icons">add</i>COAからインポート</a>
             <% } %>
             <a class="btn btn-primary search btn-ok search-button" href="#">
-                <i class="material-icons">refresh</i>検索</a>
+                <i class="material-icons">refresh</i>更新</a>
         </div>
-        <form>
-            <div class="form-row">
-                <div class="form-group bmd-form-group col-md-2">
-                    <label class="bmd-label-static">劇場 <span class="text-danger">＊</span></label>
 
-                    <div class="input-group">
-                        <select class="form-control" name="theater">
-                            <option value="">選択してください</option>
-                            <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
-                            <% for (const movieTheater of movieTheaters) { %>
-                            <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
-                            <% } %>
-                            <% } else { %>
-                            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                            <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
-                            <% } %>
-                            <% } %>
-                        </select>
-                    </div>
-                </div>
+        <div class="material-datatables">
+            <div id="datatables_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label class="bmd-label-static">劇場 <span class="text-danger">＊</span></label>
 
-                <div class="form-group bmd-form-group col-md-2">
-                    <label class="bmd-label-static">シアター</label>
-                    <select class="form-control" name="screen">
-                        <option value="">劇場を選択してください</option>
-                    </select>
-                </div>
+                                    <div class="input-group">
+                                        <select class="form-control" name="theater">
+                                            <option value="">選択してください</option>
+                                            <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
+                                            <% for (const movieTheater of movieTheaters) { %>
+                                            <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
+                                            <% } %>
+                                            <% } else { %>
+                                            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                                            <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
+                                            <% } %>
+                                            <% } %>
+                                        </select>
+                                    </div>
+                                </div>
 
-                <div class="form-group bmd-form-group col-md-4">
-                    <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label class="bmd-label-static">シアター</label>
+                                    <select class="form-control" name="screen">
+                                        <option value="">劇場を選択してください</option>
+                                    </select>
+                                </div>
 
-                    <div class="row">
-                        <div class="col-md-4">
-                            <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください"
-                                maxlength="10">
-                        </div>
+                                <div class="form-group bmd-form-group col-md-4">
+                                    <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
 
-                        <div class="col-md-8">
-                            <div class="form-check form-check-radio form-check-inline">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="radio" name="days" id="radio-days-1" value="1"
-                                        checked> 1日
-                                    <span class="circle">
-                                        <span class="check"></span>
-                                    </span>
-                                </label>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <input autocomplete="off" class="form-control datepicker" name="date"
+                                                placeholder="選択してください" maxlength="10">
+                                        </div>
+
+                                        <div class="col-md-8">
+                                            <div class="form-check form-check-radio form-check-inline">
+                                                <label class="form-check-label">
+                                                    <input class="form-check-input" type="radio" name="days"
+                                                        id="radio-days-1" value="1" checked> 1日
+                                                    <span class="circle">
+                                                        <span class="check"></span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                            <div class="form-check form-check-radio form-check-inline">
+                                                <label class="form-check-label">
+                                                    <input class="form-check-input" type="radio" name="days"
+                                                        id="radio-days-3" value="3"> 3日
+                                                    <span class="circle">
+                                                        <span class="check"></span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                            <div class="form-check form-check-radio form-check-inline disabled">
+                                                <label class="form-check-label">
+                                                    <input class="form-check-input" type="radio" name="days"
+                                                        id="radio-days-7" value="7"> 7日
+                                                    <span class="circle">
+                                                        <span class="check"></span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-4">
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="onlyReservedSeatsAvailable">
+                                            <input class="form-check-input" type="checkbox"
+                                                name="onlyReservedSeatsAvailable" id="onlyReservedSeatsAvailable"
+                                                value="1">
+                                            座席指定有のみ
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="form-check form-check-radio form-check-inline">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="radio" name="days" id="radio-days-3"
-                                        value="3"> 3日
-                                    <span class="circle">
-                                        <span class="check"></span>
-                                    </span>
-                                </label>
-                            </div>
-                            <div class="form-check form-check-radio form-check-inline disabled">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="radio" name="days" id="radio-days-7"
-                                        value="7"> 7日
-                                    <span class="circle">
-                                        <span class="check"></span>
-                                    </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group bmd-form-group col-md-4">
-                    <div class="form-check">
-                        <label class="form-check-label" for="onlyReservedSeatsAvailable">
-                            <input class="form-check-input" type="checkbox" name="onlyReservedSeatsAvailable"
-                                id="onlyReservedSeatsAvailable" value="1">
-                            座席指定有のみ
-                            <span class="form-check-sign">
-                                <span class="check"></span>
-                            </span>
-                        </label>
+                        </form>
                     </div>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
 
